[package]
name = "anarki"
version = "0.1.0"
edition = "2021"

[dependencies]
gpl-metaplex-token-metadata = "0.0.1"
gpl-metaplex-token-vault = "0.0.1"
metadata = "0.1.9"
metaplex = "0.0.1"
metaplex-token-metadata = "0.0.1"
mpl-cli = "0.1.0-alpha.1"
mpl-metaplex = "0.1.0"
mpl-token-metadata = "5.1.0"
sbf = "0.1.6"
sbf-blake3 = "0.2.0"
solana-cli = "2.1.0"
solana-sdk = "2.1.0"
spl-token = "7.0.0"
spl-token-2022 = "6.0.0"
spl-token-cli = "5.0.0"
