[package]
name = "anarcrypt"
version = "0.1.0"
edition = "2021"

[dependencies]
agave = "0.1.0"
solana-cli = "2.1.0"
solana-test-validator = "2.1.0"
solana-tokens = "2.1.0"
spl-token = "7.0.0"
spl-associated-token-account = "1.0.0"

[lib]
name = "src/lib.rs"  # This is the library target name
crate-type = ["lib"]  # Specify that this is a library crate