[package]
name = "anarcrypt-tokens"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "2.1.1"
spl-token = "7.0.0"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
solana-cli = "2.1.1"

[lib]
name = "src/lib.rs"  # This is the library target name
crate-type = ["lib"]  # Specify that this is a library crate