[package]
name = "anarki"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["khaos-token"]

[dependencies]
gpl-metaplex-token-metadata = "0.0.1"
gpl-metaplex-token-vault = "0.0.1"
metadata = "0.1.9"
metaplex = "0.0.1"
metaplex-token-metadata = "0.0.1"
mpl-cli = "0.1.0-alpha.1"
mpl-metaplex = "0.1.0"
mpl-token-metadata = "5.1.0"
sbf = "0.1.6"
sbf-blake3 = "0.2.0"
solana-cli = "2.1.0"
solana-sdk = "=1.18.26"
solana-client = "=1.18.26"
spl-token = { version = "=4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = "6.0.0"
spl-token-cli = "5.0.0"
spl-associated-token-account = "=2.3.0"

[[bin]]
name = "khaos_token"
path = "src/main.rs"  # Ensure src/main.rs exists
